GNOME Bugzilla – Bug 794728
Epiphany SIGSEVs in ephy_web_extension_destroy_sync_service at "../embed/web-extension/ephy-web-extension.c"
Last modified: 2018-03-27 15:23:00 UTC
Created attachment 370193 [details] BT from gdb for epiphany I'm using epiphany 3.27.90-38-gdb76a7f with WebKitGtk+ 2.19.92 from gnome-nightly's flatpak. With epiphany already running, I clicked in an email in Evolution in a link to: https://twitter.com/AmazonEnLucha When I went to the newly opened tab, it was showing the usual: "Oops! Something went wrong while displaying this page. Please reload or visit a different page to continue." Message.
Forgot to mention that this is a core from: /newroot/usr/libexec/webkit2gtk-4.0/WebKitWebProcess So, not sure this belongs to Ephy.
FTR, if I click "Reload" in the crashed tab, it reloads without problems.
(In reply to Andres Gomez from comment #1) > Forgot to mention that this is a core from: > /newroot/usr/libexec/webkit2gtk-4.0/WebKitWebProcess > > So, not sure this belongs to Ephy. This is an Epiphany web extension bug, not a WebKit bug. You got the right place!
Created attachment 370200 [details] [review] web-extension: Null-check before destroying sync service
(In reply to Michael Catanzaro from comment #4) > Created attachment 370200 [details] [review] [review] > web-extension: Null-check before destroying sync service (Gabriel, does it look right?)
Review of attachment 370200 [details] [review]: Yes, that looks just right. Thank you for fixing it!
Attachment 370200 [details] pushed as 7588e29 - web-extension: Null-check before destroying sync service