web-extension: Null-check before destroying sync service

https://bugzilla.gnome.org/show_bug.cgi?id=794728